--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,28 +10,32 @@ source:
 
 build:
   number: 0
+  noarch: python
   entry_points:
     - ckanapi=ckanapi.cli.main:main
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
   run:
-    - python
+    - python >=3.6
     - setuptools
     - docopt
-    - python-slugify >=1.0,<2.0
+    - python-slugify >=1.0
     - requests
     - setuptools
     - six >=1.9,<2.0
-    - simplejson  # [py27]
 
 test:
   imports:
     - ckanapi
     - ckanapi.cli
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://github.com/ckan/ckanapi
